# Text-Viewer

./: README.md  com.example.TextViewer.json  meson.build
data/: com.example.TextViewer.appdata.xml.in  com.example.TextViewer.desktop.in  com.example.TextViewer.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES
src/: main.c  meson.build  text-viewer-application.c  text-viewer-application.h  text-viewer-window.c  text-viewer-window.h  text-viewer-window.ui  text-viewer.gresource.xml
